--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -29,7 +29,15 @@ body {
     width: 100%;
     height: 100vh;
 
-    // pointer-events: none;
+    pointer-events: none;
 }
 
-
+* {
+    @include maxw($bp-mobile) {
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer */
+        -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+        -webkit-user-select: none; /* Chrome, Safari, and Opera */
+        -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+    }
+}
