--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -5,22 +5,40 @@
 .slideshow {
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    padding: 12.25vh 0;
+    padding: 17vh 0;
+
+    @include maxw($bp-mobile) {
+        padding: 20vh 20vw;
+    }
 }
 
 .slideshow__inner {
-    width: 100%;
+    width: 40vw;
     max-width: 456px;
+
+    @include maxw($bp-mobile) {
+        width: 100%;
+    }
 }
 
 .slide {
     @include ratio(144.7%, 'img');
     overflow: hidden;
     width: 100%;
-    max-height: 660px;
-    margin-bottom: 7.5rem;
+    height: 100%;
+    margin-bottom: 75px;
+
+    h3 {
+        opacity: 0;
+        user-select: none;
+
+        pointer-events: none;
+    }
 
     img {
         display: block;
@@ -28,5 +46,10 @@
         height: 100%;
 
         object-fit: cover;
+
+        opacity: 0;
+        user-select: none;
+
+        pointer-events: none;
     }
 }
