--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,8 +2,8 @@
 /* Imports & variables
 --------------------------------------------------------- */
 
-// @import url('https://fonts.googleapis.com/css?family=PT+Mono&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Dorsa&display=swap');
+@import url('https://fonts.googleapis.com/css?family=PT+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dorsa&display=swap');
 
 
 
