--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 html, body {
@@ -14,15 +14,15 @@ html, body {
 
 body {
     margin: 0;
-
     --color-text: #38201e;
     --color-bg: #fff2e1;
-    --color-circles: #FFFDF9;
-    --color-link: #9b887f;
-    --color-link-hover: #38201e;
+    --color-deco: rgba(212, 169, 126, 0.12);
+    --color-title: #292213;
+    --color-link: #c37646;
+    --color-link-hover: #000;
     color: var(--color-text);
     background-color: var(--color-bg);
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+    font-family: niveau-grotesk, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -77,102 +77,38 @@ a:focus {
     outline: none;
 }
 
-.message {
-    background: var(--color-text);
-    color: var(--color-bg);
-    padding: 1rem;
-    text-align: center;
-}
-
 .frame {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 3rem 5vw;
+    padding: 2rem;
     text-align: center;
-    z-index: 1000;
-    pointer-events: none;
-    display: grid;
-    grid-template-rows: 1fr auto auto;
-    grid-template-areas: 'title'
-                        'demos'
-                        'links';
-
-    > * { pointer-events: all; }
+    position: relative;
+    z-index: 1200;
+    line-height: 1.5;
 }
 
 .frame__title {
     margin: 0;
-
-    font-size: 1.125em;
-}
-
-.frame__links {
-    display: flex;
-    flex-direction: column;
-
-    a {
-        display: inline-block;
-    }
-
-    @media screen and (max-width: 53em) {
-        flex-direction: row;
-        justify-content: center;
-    }
+    font-size: 1rem;
+    font-weight: normal;
 }
 
 .frame__links a:not(:last-child) {
-    margin-bottom: .8rem;
-
-    @media screen and (max-width: 53em) {
-        margin-right: 1rem;
-        margin-bottom: 0;
-    }
-}
-
-.frame__demos {
-    margin: 1rem 0;
-
-    @media screen and (max-width: 53em) {
-        a:not(:last-child) {
-            display: inline-block;
-            margin-right: 1rem;
-        }
-    }
-}
-
-
-.frame__demo--current,
-.frame__demo--current:hover {
-    color: var(--color-text);
+    margin-right: .8rem;
 }
 
 .content {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 18rem);
     position: relative;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: center;
 }
 
 .frame__tagline {
     display: block;
     position: relative;
     margin: 0;
-    // padding: 0 0 0 1rem;
-    line-height: 2;
-
-    color: var(--color-link);
-
-    a {
-        &:hover {
-            color: var(--color-link-hover);
-        }
-    }
 }
 
 @media screen and (min-width: 53em) {
@@ -185,61 +121,31 @@ a:focus {
         z-index: 100;
         top: 0;
         left: 0;
+        line-height: 1;
         display: grid;
         align-content: space-between;
+        justify-content: space-between;
         width: 100%;
         max-width: none;
-        height: 100vh;
-        padding: 3rem;
+        padding: 2rem 3rem;
         pointer-events: none;
-        grid-template-columns: 25%;
-        grid-template-rows: auto auto auto;
-        grid-template-areas: '... ...'
-                            '... ...'
-                            'ctn ...';
+        grid-template-areas: 'title links';
     }
     .frame__title-wrap {
-        grid-area: ctn;
-        display: flex;
-        flex-direction: column;
+        grid-area: title;
+        line-height: 1.5;
     }
     .frame__title {
         margin: 0;
     }
-    .frame__demos {
-        display: flex;
-        align-items: center;
-        margin: 0;
-        grid-area: demos;
-        justify-self: end;
-
-        a:not(:last-child) {
-            margin-right: 1rem;
-        }
-    }
     .frame__links {
-        // grid-area: links;
-        margin-top: 4rem;
+        grid-area: links;
         padding: 0;
-        justify-self: end;
     }
     .frame a {
         pointer-events: auto;
     }
     .content {
         height: 100vh;
-        justify-content: center;
-    }
-}
-
-
-.frame__title-wrap {
-    @include maxw(53em) {
-        display: grid;
-        grid-template-rows: auto 1fr;
-        grid-template-areas:
-            'title'
-            'demos'
-            'links';
     }
 }
