Disable text select on title

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -17,6 +17,10 @@
     line-height: 0.9;
     color: var(--color-title);
     pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 
